--- a/index.html
+++ b/index.html
@@ -5,31 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tom's Jazz School</title>
+    <link rel="stylesheet" href="./src/css/index.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <img src="./src/img/logo.svg" alt="Tom's Jazz School">
-        <nav>
+        <nav class="mt-1 mx-auto">
             <a href="#">Inicio</a>
             <a href="#">Cursos</a>
             <a href="#">Eventos</a>
             <a href="#">Contato</a>
         </nav>
-        <a href="#" class="button">Se inscreva</a>
+        <a href="#" class="button mt-1 mb-1 mx-auto">Se inscreva</a>
     </header>
     <main>
-        <section>
+        <section class="hero-section">
             <img src="./src/img/hero-img.svg" alt="Banda de Jazz tocando">
             <div>
-                <h1>Crie algo <span>impactante</span> com música</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus expedita officiis iste
+                <h1 class="mt-2">Crie algo <span class="text-primary decoration">impactante</span> com música</h1>
+                <p class="mt-2 mb-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus expedita officiis iste
                     dignissimos numquam obcaecati voluptates! Aspernatur est suscipit itaque? Aspernatur, dolor dicta.
                     Quasi distinctio, repudiandae molestiae deserunt similique modi.</p>
                 <a href="#" class="button">Comece agora</a>
             </div>
         </section>
-        <section>
+        <section class="courses-section">
             <div class="cards">
                 <article>
                     <img src="./src/img/piano.png" alt="Ícone de teclas de piano">
@@ -72,14 +77,16 @@
                     </a>
                 </article>
             </div>
-            <h2>E <span>varios</span> outros!</h2>
+            <h2>E <span class="text-primary">varios</span> outros!</h2>
             <a href="#">Conhecer os cursos</a>
         </section>
     </main>
     <footer>
         <div>
             <img src="./src/img/logo.svg" alt="Tom's Jazz School">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam atque accusamus error unde architecto eligendi dolores dolorem quidem, consequatur ab, tempore expedita possimus molestiae excepturi amet hic. Neque, sequi suscipit?</p>            
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam atque accusamus error unde architecto
+                eligendi dolores dolorem quidem, consequatur ab, tempore expedita possimus molestiae excepturi amet hic.
+                Neque, sequi suscipit?</p>
         </div>
         <nav>
             <a href="#">Inicio</a>
