--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
         <section class="courses-section">
             <div class="cards">
-                <article>
+                <article class="card">
                     <img src="./src/img/piano.png" alt="Ícone de teclas de piano">
                     <strong>Piano popular</strong>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi id, possimus architecto sapiente
@@ -46,7 +46,7 @@
                         <img src="./src/img/arrow-right.svg" alt="Ir para página do curso">
                     </a>
                 </article>
-                <article>
+                <article class="card">
                     <img src="./src/img/clef.png" alt="Ícone da clave de sol">
                     <strong>Teoria musical</strong>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi id, possimus architecto sapiente
@@ -56,7 +56,7 @@
                         <img src="./src/img/arrow-right.svg" alt="Ir para página do curso">
                     </a>
                 </article>
-                <article>
+                <article class="card">
                     <img src="./src/img/sax.png" alt="Ícone de saxofone">
                     <strong>Sax alto</strong>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi id, possimus architecto sapiente
@@ -66,7 +66,7 @@
                         <img src="./src/img/arrow-right.svg" alt="Ir para página do curso">
                     </a>
                 </article>
-                <article>
+                <article class="card">
                     <img src="./src/img/drums.png" alt="Ícone de bateria">
                     <strong>Bateria</strong>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi id, possimus architecto sapiente
@@ -77,26 +77,27 @@
                     </a>
                 </article>
             </div>
-            <h2>E <span class="text-primary">varios</span> outros!</h2>
-            <a href="#">Conhecer os cursos</a>
+            <h2 class="text-center">E <span class="text-primary">varios</span> outros!</h2>
+            <a href="#" class="button mt-2 mx-auto">Conhecer os cursos</a>
         </section>
     </main>
     <footer>
         <div>
-            <img src="./src/img/logo.svg" alt="Tom's Jazz School">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam atque accusamus error unde architecto
+            <img src="./src/img/logo.svg" alt="Tom's Jazz School" class="mb-1">
+            <p class="mb-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam atque accusamus error unde architecto
                 eligendi dolores dolorem quidem, consequatur ab, tempore expedita possimus molestiae excepturi amet hic.
                 Neque, sequi suscipit?</p>
         </div>
-        <nav>
+        <nav class="mb-2">
             <a href="#">Inicio</a>
             <a href="#">Cursos</a>
             <a href="#">Eventos</a>
             <a href="#">Contato</a>
         </nav>
-        <form>
-            <label for="email">Recebe materiais gratuitos no seu email</label>
-            <input type="text" name="email" id="email" placeholder="Digite seu email">
+        <form class="newsletter-form">
+            <label for="email" class="mb-1">Recebe materiais gratuitos no seu email</label>
+            <input type="text" name="email" id="email" placeholder="Digite seu email" class="mb-1">
+            <button class="button mb-2">Quero receber</button>
         </form>
     </footer>
 </body>
